[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidal-net-telemetry-reconstruction"
version = "0.1.0"
description = "Public PyTorch implementation of TiDAL-Net for irregular satellite telemetry reconstruction."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TiDAL-Net Authors"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "torch>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.2",
]

[tool.setuptools.packages.find]
include = ["tidal_recovery*"]
